--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <p>Hello World</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque est
+      mollitia modi eligendi nihil autem deserunt, excepturi voluptas nulla nam.
+    </p>
   </body>
 </html>
